--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ googleapis-common-protos==1.72.0
 greenlet==3.3.1
 httplib2==0.31.2
 idna==3.11
+isodate
 Jinja2==3.1.6
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
@@ -38,6 +39,7 @@ pydeck==0.9.1
 PyMySQL==1.1.2
 pyparsing==3.3.2
 python-dateutil==2.9.0.post0
+python-dotenv
 pytz==2025.2
 referencing==0.37.0
 requests==2.32.5
@@ -46,7 +48,7 @@ rsa==4.9.1
 six==1.17.0
 smmap==5.0.2
 SQLAlchemy==2.0.46
-streamlit==1.54.0
+streamlit==1.31.0
 tenacity==9.1.3
 toml==0.10.2
 tornado==6.5.4
@@ -55,6 +57,3 @@ tzdata==2025.3
 uritemplate==4.2.0
 urllib3==2.6.3
 watchdog==6.0.0
-streamlit
-google-api-python-client
-python-dotenv
